--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "format:check": "prettier -c \"src/**/*.ts\" \"test/**/*.ts\"",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint:check": "tslint -p tsconfig.json -c tslint.json",
+    "precommit": "lint-staged",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -52,6 +53,7 @@
     "@types/supertest": "^2.0.10",
     "husky": "^7.0.1",
     "jest": "^26.0.0",
+    "lint-staged": "^11.0.1",
     "prettier": "1.19.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.0",
@@ -65,7 +67,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run format"
+      "pre-commit": "npm run precommit"
     }
   },
   "lint-staged": {
