--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "husky": "^7.0.1",
     "jest": "^26.0.0",
     "lint-staged": "^11.0.1",
-    "prettier": "1.19.1",
+    "prettier": "^2.3.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.0",
     "supertest": "4.0.2",
