--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "format:check": "prettier -c \"src/**/*.ts\" \"test/**/*.ts\"",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint:check": "tslint -p tsconfig.json -c tslint.json",
-    "precommit": "lint-staged",
+    "precommit": "npx --no-install lint-staged",
     "test": "jest --no-cache --coverage",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -67,7 +67,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run precommit"
+      "pre-commit": "npm run precommit",
+      "pre-push": "npm run test"
     }
   },
   "lint-staged": {
