--- a/package.json
+++ b/package.json
@@ -41,16 +41,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "peerDependencies": {
-    "@nestjs/common": "^6.10.0 || ^7.0.0 || ^8.0.0"
+    "@nestjs/common": "^6.10.0 || ^7.0.0 || ^8.0.0 || ^9.0.0"
   },
   "dependencies": {
     "soap": "^0.45.0"
   },
   "devDependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
     "@types/jest": "25.1.4",
     "@types/node": "^13.13.14",
     "@types/supertest": "^2.0.10",
