--- a/package.json
+++ b/package.json
@@ -41,18 +41,18 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "peerDependencies": {
-    "@nestjs/common": "^6.10.0 || ^7.0.0 || ^8.0.0"
+    "@nestjs/common": "^6.10.0 || ^7.0.0 || 8.3.1"
   },
   "dependencies": {
     "soap": "^0.45.0"
   },
   "devDependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/common": "8.3.1",
+    "@nestjs/core": "8.3.1",
+    "@nestjs/platform-express": "8.3.1",
+    "@nestjs/testing": "8.3.1",
     "@types/jest": "25.1.4",
-    "@types/node": "^13.13.14",
+    "@types/node": "^18.6.1",
     "@types/supertest": "^2.0.10",
     "husky": "^7.0.1",
     "jest": "^26.0.0",
