--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "peerDependencies": {
-    "@nestjs/common": "^6.10.0 || ^7.0.0 || 8.3.1"
+    "@nestjs/common": "^6.10.0 || ^7.0.0 || ~8.3.1"
   },
   "dependencies": {
     "soap": "^0.45.0"
@@ -51,22 +51,22 @@
     "@nestjs/core": "8.3.1",
     "@nestjs/platform-express": "8.3.1",
     "@nestjs/testing": "8.3.1",
-    "@types/jest": "25.1.4",
+    "@types/jest": "27.4.1",
     "@types/node": "^18.6.1",
-    "@types/supertest": "^2.0.10",
+    "@types/supertest": "2.0.12",
     "husky": "^7.0.1",
-    "jest": "^26.0.0",
-    "lint-staged": "^11.0.1",
+    "jest": "27.5.1",
+    "lint-staged": "13.0.3",
     "prettier": "^2.3.2",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.1.0",
-    "supertest": "4.0.2",
-    "ts-jest": "^26.1.2",
-    "ts-node": "8.10.2",
+    "reflect-metadata": "0.1.13",
+    "rxjs": "7.2.0",
+    "supertest": "6.1.3",
+    "ts-jest": "27.1.5",
+    "ts-node": "10.9.1",
     "tsc-watch": "2.2.1",
-    "tsconfig-paths": "3.8.0",
+    "tsconfig-paths": "4.0.0",
     "tslint": "5.16.0",
-    "typescript": "4.3.5"
+    "typescript": "4.7.4"
   },
   "husky": {
     "hooks": {
