--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestjs-soap",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "Nestjs module wrapper for soap",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -41,7 +41,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "peerDependencies": {
-    "@nestjs/common": "^8.4.0 || ^9.0.0"
+    "@nestjs/common": "^8.4.0 || ^9.0.0 || ^10.0.0"
   },
   "dependencies": {
     "soap": "^1.0.0"
