--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "peerDependencies": {
-    "@nestjs/common": "^8.4.0 || ^9.0.0 || ^10.0.0"
+    "@nestjs/common": "^8.4.0 || ^9.0.0 || ^10.0.0 || ^11.0.0"
   },
   "dependencies": {
     "soap": "^1.0.0"
